Set timout for slider caption to prevent the element from jumping

--- a/eea/climateadapt/theme/climateadaptv2/src/less/homepage-slider.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/homepage-slider.less
@@ -20,6 +20,11 @@
   background-color: rgba(255, 255, 255, 0.9);
   color: white;
   padding: 0 10px 10px 10px !important;
+  display: none;
+
+  .flex-wrapper {
+    padding: 0;
+  }
 }
 
 .slider-nav .slick-slide {
@@ -107,6 +112,7 @@
   max-width: 600px;
   max-height: 200px;
   height: auto;
+  display: none;
 
   .read-more-wrapper {
     bottom: auto;
